--- a/youtube-clone/src/App.css
+++ b/youtube-clone/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+main {
+  margin: 30px 24px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+  word-spacing: 0px;
+  display: inline;
+  height: 28px;
+  width: 672px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.img-box {
+  width: 50px;
+  height: 50px;
+  border-radius: 70%;
+  overflow: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.profile {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.video-info-bar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+}
+.channel {
+  display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+.channel-info {
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  display: flex;
 }
