--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -1,11 +1,11 @@
-.container {
+.signup-container {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
 }
 
-.login-box {
+.signup-box {
   width: 400px;
   height: 600px;
   padding: 20px;
@@ -15,43 +15,45 @@
   text-align: center;
 }
 
-.login-header {
+.signup-header {
   padding: 50px 0px 30px 0px;
   font-size: 35px;
   font-weight: bold;
 }
 
-.login-email {
-  width: 50%;
+.signup-Id {
+  width: 60%;
   padding: 10px;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
-.login-password {
-  width: 50%;
+.signup-email {
+  width: 60%;
   padding: 10px;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
-.remember-id {
-  padding: 20px 100px 40px 0px;
+.signup-password {
+  width: 60%;
+  padding: 10px;
+  margin-top: 30px;
 }
 
-.loginSumbit {
+.signup-password-check {
+  width: 60%;
+  padding: 10px;
+  margin-top: 30px;
+}
+
+.signupSumbit {
   width: 200px;
-  padding: 10px;
-  margin-bottom: 40px;
+  padding: 15px;
+  margin-top: 30px;
   background-color: gray;
   color: white;
   cursor: pointer;
   border: none;
   border-radius: 5px;
-}
-
-.signup-in {
-  border: none;
-  padding: 10px;
+  font-weight: bold;
   font-size: 15px;
-  background-color: white;
-  cursor: pointer;
 }
