form css complete

--- a/youtube-clone/src/App.css
+++ b/youtube-clone/src/App.css
@@ -2,7 +2,10 @@ main {
   margin: 30px 24px;
   display: flex;
 }
-
+.video-side {
+  width: 672px;
+  margin-right: 40px;
+}
 .title {
   font-family: Roboto, Arial, sans-serif;
   font-size: 20px;
@@ -30,6 +33,7 @@ main {
 .video-info-bar {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 15px;
 }
 .channel {
   display: flex;
@@ -133,7 +137,120 @@ main {
   margin-right: 8px;
 }
 
-.recommendedVideo {
-  width: 440px;
-  height: auto;
+.rcmVideo-list-info-box {
+  height: 100px;
+}
+.rcmVideo-list-info-title {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  color: #0f0f0f;
+}
+.rcmVideo-list-info-subinfo {
+  font: Roboto, Arial, sans-serif;
+  color: #606060;
+  font-size: 12px;
+  line-height: 18px;
+  text-decoration: none solid rgb(96, 96, 96);
+}
+
+.rcmVideo-list-filter-btn {
+  display: inline-flex;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  color: black;
+  background-color: #f2f2f2;
+  border: none;
+  height: 32px;
+  border-radius: 5px;
+  padding: 15px;
+
+  margin-right: 8px;
+}
+.detail {
+  margin: 20px 0 20px 0;
+  padding: 15px;
+  border-radius: 15px;
+  background-color: #f2f2f2;
+}
+.detail-watch-date {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 500;
+}
+
+.detail-watch-detail {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 500;
+}
+
+.comment-box {
+  display: flex;
+  margin: 20px 0 20px 0;
+}
+
+.comment-number {
+  margin-right: 20px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+}
+
+.comment-filter {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+.comment-contents-img {
+  margin-right: 10px;
+}
+.comment-contents-box {
+  display: flex;
+}
+
+.comment-contents-id-box {
+  display: flex;
+}
+
+.comment-contents-id {
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 18px;
+  margin-right: 5px;
+}
+
+.comment-contents-date {
+  font-size: 12px;
+  line-height: 18px;
+}
+
+.comment-contents-content {
+  font-size: 14px;
+  line-height: 20px;
+}
+.comment-contents-recomment {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 32px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  border-radius: 20px;
+}
+
+.comment-contents-btn-like-unlike {
+  margin-right: 10px;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 32px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  border-radius: 20px;
 }
