회원가입로직
회원가입로직만들기
1. 이메일 입력시 형식에 맞춰야함
2. 비밀번호는 영문,숫자,특수문자 포함 8자 이상입력해야함
3. 비밀번호 확인은 비밀번호와 일치해야하며 일치하지않고 회원가입을 하려고하면 일치하지 않다고 뜸

--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -24,25 +24,31 @@
 .signup-Id {
   width: 60%;
   padding: 10px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .signup-email {
   width: 60%;
   padding: 10px;
-  margin-top: 30px;
+  margin-top: 10px;
+}
+
+.signupErrorMessage {
+  font-size: 12px;
+  color: red;
+  padding-top: 5px;
 }
 
 .signup-password {
   width: 60%;
   padding: 10px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .signup-password-check {
   width: 60%;
   padding: 10px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .signupSumbit {
