--- a/src/components/SignIn.css
+++ b/src/components/SignIn.css
@@ -66,3 +66,13 @@
   background-color: white;
   cursor: pointer;
 }
+
+.social-login {
+  padding: 10px;
+}
+
+.social-login-iocons img {
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+}
