다른 계정으로 로그인 만들기
다른 계정으로 로그인 만들기 (형태만 만들어놓은 것)

--- a/src/components/SignIn.css
+++ b/src/components/SignIn.css
@@ -76,3 +76,33 @@
   width: 50px;
   height: 50px;
 }
+
+.line {
+  display: flex;
+  flex-basis: 100%;
+  align-items: center;
+  color: gray;
+  font-size: 15px;
+
+  margin: 12px;
+}
+
+.line::before {
+  content: " ";
+  flex-grow: 1;
+  margin: 10px;
+  background: gray;
+  height: 1px;
+  font-size: 0px;
+  line-height: 0px;
+}
+
+.line::after {
+  content: " ";
+  flex-grow: 1;
+  margin: 10px;
+  background: gray;
+  height: 1px;
+  font-size: 0px;
+  line-height: 0px;
+}
