--- a/youtube-clone/src/assets/scss/setting/_vars.scss
+++ b/youtube-clone/src/assets/scss/setting/_vars.scss
@@ -16,6 +16,8 @@
   --white400: #fff;
   --white500: #fff;
 
+  --red: #f00;
+
   // 폰트 셋팅
   font-family: var(--mainfont-nanum), var(--mainfont-nexon);
   font-size: 16px;
