--- a/src/components/SignIn.css
+++ b/src/components/SignIn.css
@@ -16,9 +16,16 @@
 }
 
 .login-header {
-  padding: 50px 0px 30px 0px;
-  font-size: 35px;
+  padding: 30px 0px 0px 0px;
+  font-size: 25px;
   font-weight: bold;
+}
+
+.login-main {
+  padding: 20px 0px 20px 0px;
+  font-size: 20px;
+  font-weight: bold;
+  color: gray;
 }
 
 .login-email {
@@ -36,17 +43,17 @@
 .login-password {
   width: 60%;
   padding: 10px;
-  margin-top: 10px;
+  margin: 5px 0px 5px 0px;
 }
 
 .remember-id {
-  padding: 20px 100px 40px 0px;
+  padding: 10px 100px 25px 0px;
 }
 
 .loginSumbit {
   width: 200px;
   padding: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   background-color: rgb(243, 101, 101);
   color: white;
   cursor: pointer;
@@ -61,14 +68,14 @@
 
 .signup-in {
   border: none;
-  padding: 10px;
+  padding: 15px;
   font-size: 15px;
   background-color: white;
   cursor: pointer;
 }
 
 .social-login-iocons img {
-  padding: 10px;
+  padding: 15px;
   width: 50px;
   height: 50px;
 }
@@ -79,8 +86,7 @@
   align-items: center;
   color: gray;
   font-size: 15px;
-
-  margin: 12px;
+  margin: 20px 0px 20px 0px;
 }
 
 .line::before {
