--- a/src/components/SignIn.css
+++ b/src/components/SignIn.css
@@ -15,23 +15,22 @@
   text-align: center;
 }
 
-.login-header {
-  padding: 30px 0px 0px 0px;
-  font-size: 25px;
-  font-weight: bold;
+.login-title-logo img {
+  padding-top: 20px;
+  width: 190px;
+  height: 60px;
 }
 
-.login-main {
-  padding: 20px 0px 20px 0px;
+.login-header {
+  padding: 15px;
   font-size: 20px;
   font-weight: bold;
-  color: gray;
 }
 
 .login-email {
   width: 60%;
   padding: 10px;
-  margin-top: 10px;
+  margin-top: 8px;
 }
 
 .errorMessageWrap {
@@ -43,7 +42,7 @@
 .login-password {
   width: 60%;
   padding: 10px;
-  margin: 5px 0px 5px 0px;
+  margin: 8px 0px 8px 0px;
 }
 
 .remember-id {
@@ -53,8 +52,8 @@
 .loginSumbit {
   width: 200px;
   padding: 10px;
-  margin-bottom: 30px;
-  background-color: rgb(243, 101, 101);
+  margin-bottom: 25px;
+  background-color: red;
   color: white;
   cursor: pointer;
   border: none;
@@ -74,10 +73,10 @@
   cursor: pointer;
 }
 
-.social-login-iocons img {
-  padding: 15px;
-  width: 50px;
-  height: 50px;
+.social-login-icons img {
+  padding: 10px;
+  width: 60px;
+  height: 60px;
 }
 
 .line {
