sidebar fixed 및 scroll 구현

--- a/youtube-clone/src/components/Sidebar.css
+++ b/youtube-clone/src/components/Sidebar.css
@@ -2,6 +2,10 @@
    flex: 0.2;
    padding: 20px 5px;
    width: 12.5rem;
+   white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow-y: scroll;
+   
  }
  
  .sidebar > hr {
@@ -10,5 +14,9 @@
    background-color: lightgray;
    margin-top: 10px;
    margin-bottom: 10px;
+ }
+
+ .sidebar > span {
+  font-size: large;
  }
  
