sidebar Icon 크기 수정 및 scrollbar Custom

--- a/youtube-clone/src/components/SidebarRow.css
+++ b/youtube-clone/src/components/SidebarRow.css
@@ -6,7 +6,7 @@
   
   .sidebarRow__icon {
     color: black;
-    font-size: large !important;
+    font-size: 24px !important;
   }
   
   .sidebarRow__title {
