--- a/youtube-clone/src/components/Sidebar.css
+++ b/youtube-clone/src/components/Sidebar.css
@@ -11,7 +11,7 @@
  .sidebar > hr {
    height: 1px;
    border: 0;
-   background-color: lightgray;
+   background-color: white;
    margin-top: 10px;
    margin-bottom: 10px;
  }
@@ -20,3 +20,19 @@
   font-size: large;
  }
  
+ .sidebar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.sidebar::-webkit-scrollbar-track {
+  background-color: #fff; 
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: #909090;
+  border-radius: 10px;
+}
+
+.sidebar::-webkit-scrollbar-thumb:hover {
+  background-color: #909090; 
+}
